Fix string truncate error
Earlier, string truncation was performed based on number of letters in the string, leading to a single or a couple of letters before elipses, which looked weird. Now it's based on number of words

--- a/src/components/articleList/articleList.css
+++ b/src/components/articleList/articleList.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family==Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap');
 .card-secondary {
-   border: 1px solid black;
+   /* border: 1px solid black; */
 }
 
 .card-text-list {
@@ -31,6 +31,7 @@
 
 .posts {
    margin: 3rem;
+   height: 1fr;
 }
 
 /* .sub_heading>h2 {
